# diplom

./: .env  .env.sample  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
interface/: forms.py  urls.py
interface/templates/interface/: base.html  index.html  register.html  sms_code.html  user_detail.html  user_update.html
interface/templates/interface/includes/: inc_users_menu.html
users/: models.py  serializers.py  services.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_invite_code.py  0003_user_ref_code.py  0004_alter_user_phone.py  0005_user_username.py  0006_remove_user_username.py
users/templates/: login.html
